==> KKKKpossible/sh1106_oled_adafruit/Core/Src/Adafruit_SSD1306.cpp <==
#include <stdlib.h>
#include "string.h"
#include "glcdfont.h"
#include "Adafruit_GFX.h"
#include "Adafruit_SSD1306.h"
#define SSD1306_CMD   0x00
#define SSD1306_DATA  0x40
#define pgm_read_byte(addr) (*(const unsigned char *)(addr))
#define ssd1306_swap(a, b) { int16_t t = a; a = b; b = t; }

void Adafruit_SSD1306::ssd1306_command(uint8_t c) {
  
  Buffer_CMD[1] = c;
  
  while(HAL_I2C_Master_Transmit(&hi2c1,_i2caddr,Buffer_CMD,0x02,0x10) != HAL_OK)
  {

  }
}

void Adafruit_SSD1306::display(void) {
  ssd1306_command(SSD1306_COLUMNADDR);
  ssd1306_command(0);   // Column start address (0 = reset)
  ssd1306_command(SSD1306_LCDWIDTH-1); // Column end address (127 = reset)

  ssd1306_command(SSD1306_PAGEADDR);
  ssd1306_command(0); // Page start address (0 = reset)
  #if SSD1306_LCDHEIGHT == 64
    ssd1306_command(7); // Page end address
  #endif
  #if SSD1306_LCDHEIGHT == 32
    ssd1306_command(3); // Page end address
  #endif
  #if SSD1306_LCDHEIGHT == 16
    ssd1306_command(1); // Page end address
  #endif
  
  // save I2C bitrate
#ifdef TWBR
  uint8_t twbrbackup = TWBR;
  TWBR = 12; // upgrade to 400KHz!
#endif

//I2C write
  for (uint16_t i=0; i<(SSD1306_LCDWIDTH*SSD1306_LCDHEIGHT/8); i += 128) {
    
    ssd1306_data(i);
  }

#ifdef TWBR
    TWBR = twbrbackup;
#endif
  
}
