==> dchwebb/PlayDice/Adafruit_ssd1306.cpp <==
#include <avr/pgmspace.h>
#include <pgmspace.h>
#define pgm_read_byte(addr) (*(const unsigned char *)(addr))
#include <util/delay.h>
#include <stdlib.h>
#include <Wire.h>
#include <SPI.h>
#include "Adafruit_GFX.h"
#include "Adafruit_SSD1306.h"
#include <iterator>		// DW
#define ssd1306_swap(a, b) { int16_t t = a; a = b; b = t; }

void Adafruit_SSD1306::ssd1306_command(uint8_t c) {
	if (sid != -1)
	{
		// SPI
#ifdef HAVE_PORTREG
		*csport |= cspinmask;
		*dcport &= ~dcpinmask;
		*csport &= ~cspinmask;
#else
		digitalWrite(cs, HIGH);
		digitalWrite(dc, LOW);
		digitalWrite(cs, LOW);
#endif
		fastSPIwrite(c);
#ifdef HAVE_PORTREG
		*csport |= cspinmask;
#else
		digitalWrite(cs, HIGH);
#endif
	}
	else
	{
		// I2C
		uint8_t control = 0x00;   // Co = 0, D/C = 0
		Wire.beginTransmission(_i2caddr);
		Wire.write(control);
		Wire.write(c);
		Wire.endTransmission();
	}
}

boolean Adafruit_SSD1306::display(boolean fullUpdate) {
	if (fullUpdate) {
		forceUpdate = 1;
	}
	display();
}

boolean Adafruit_SSD1306::display(void) {
	// DW if no changes required do not update display
	if (forceUpdate == 0 && std::equal(std::begin(buffer), std::end(buffer), std::begin(bufferprev))) {
		return 0;
	}

	if (sid != -1)
	{
		if (forceUpdate == 0) {
			// DW use page mode so we can draw only changes
			if (screenMode != 0x02) {
				ssd1306_command(0x20);		// OLED_CMD_SET_MEMORY_ADDR_MODE
				ssd1306_command(0x02);		// 0x00 = HORZ mode ; 0x01 = VERT ; 0x02 = PAGE
				screenMode = 0x02;
			}
			uint16_t b = 0;
			for (uint16_t row = 0; row < 8; row++) { //row - top to bottom
				ssd1306_command(0xB0 + row);		// B0~B7 row to start on (called 'page' in docs)

				const uint16_t blockSize = 8;		// to adjust trade off between updating more blocks versus each block being smaller
				for (uint16_t i = 0; i < blockSize; i++) {	// column - left to right

															// test if block has changed to see if we need to redraw
					boolean changed = 0;
					for (uint8_t x = 0; x < 128 / blockSize; x++) {	// 16 vertical strips from left to right
						if (buffer[b + x] != bufferprev[b + x]) {
							bufferprev[b + x] = buffer[b + x];
							changed = 1;
						}
					}

					if (changed) {
						//Serial.print("Refresh block "); Serial.println(b);
						uint8_t highbyte = ((b % 128) >> 4);
						uint8_t lowbyte = (b % 128) - (highbyte << 4);

						digitalWrite(cs, HIGH);
						digitalWrite(dc, LOW);
						digitalWrite(cs, LOW);

						fastSPIwrite(lowbyte);			// 00~0F Lower byte Column Start Address for Page Addressing Mode 
						fastSPIwrite(0x10 + highbyte);	// 10~1F Higher byte Column Start Address for Page Addressing Mode 

						digitalWrite(cs, HIGH);
						digitalWrite(dc, HIGH);
						digitalWrite(cs, LOW);

						for (uint8_t x = 0; x < 128 / blockSize; x++) {	// 8 vertical strips from left to right
							fastSPIwrite(buffer[b]);
							b++;
						}
						digitalWrite(cs, HIGH);
						
						// returning after each block update results in more but significantly faster updates
						return 1;
					}
					else {
						b += 128 / blockSize;
					}
				}
			}
		}
		else {
			//Serial.println("full update");
			if (screenMode != 0x00) {
				ssd1306_command(0x20);		// OLED_CMD_SET_MEMORY_ADDR_MODE
				ssd1306_command(0x00);		// 0x00 = HORZ mode ; 0x01 = VERT ; 0x02 = PAGE
				screenMode = 0x00;
			}
			ssd1306_command(SSD1306_COLUMNADDR);
			ssd1306_command(0);   // Column start address (0 = reset)
			ssd1306_command(SSD1306_LCDWIDTH - 1); // Column end address (127 = reset)

			ssd1306_command(SSD1306_PAGEADDR);
			ssd1306_command(0); // Page start address (0 = reset)
			ssd1306_command(7); // Page end address

			digitalWrite(cs, HIGH);
			digitalWrite(dc, HIGH);
			digitalWrite(cs, LOW);

			for (uint16_t i = 0; i < (SSD1306_LCDWIDTH*SSD1306_LCDHEIGHT / 8); i++) {
				fastSPIwrite(buffer[i]);
			}
			digitalWrite(cs, HIGH);
			std::copy(std::begin(buffer), std::end(buffer), std::begin(bufferprev));

		}
	}
	else {


		// I2C
		if (forceUpdate == 0) {
			// DW use page mode so we can draw only changes
			if (screenMode != 0x02) {
				Wire.beginTransmission(_i2caddr);
				Wire.write(0x20);		// OLED_CMD_SET_MEMORY_ADDR_MODE
				Wire.write(0x02);		// 0x00 = HORZ mode ; 0x01 = VERT ; 0x02 = PAGE
				Wire.endTransmission();
				screenMode = 0x02;
			}
			uint16_t b = 0;
			for (uint16_t row = 0; row < 8; row++) { //row - top to bottom
				//	set row
				Wire.beginTransmission(_i2caddr);
				Wire.write(0x00);			// command stream
				Wire.write(0xB0 + row);		// B0~B7 row to start on (called 'page' in docs)
				Wire.endTransmission();

				const uint16_t blockSize = 8;		// to adjust trade off between updating more blocks versus each block being smaller
				for (uint16_t i = 0; i < blockSize; i++) {	// column - left to right

					// test if block has changed to see if we need to redraw
					boolean changed = 0;
					for (uint8_t x = 0; x < 128 / blockSize; x++) {	// 16 vertical strips from left to right
						if (buffer[b + x] != bufferprev[b + x]) {
							bufferprev[b + x] = buffer[b + x];
							changed = 1;
						}
					}

					if (changed) {
						//Serial.print("Refresh block "); Serial.println(b);
						uint8_t highbyte = ((b % 128) >> 4);
						uint8_t lowbyte = (b % 128) - (highbyte << 4);

						Wire.beginTransmission(_i2caddr);
						Wire.write(0x00);				// command stream
						Wire.write(lowbyte);			// 00~0F Lower byte Column Start Address for Page Addressing Mode 
						Wire.write(0x10 + highbyte);	// 10~1F Higher byte Column Start Address for Page Addressing Mode 
						Wire.endTransmission();

						Wire.beginTransmission(_i2caddr);
						Wire.write(0x40);				// data stream
						for (uint8_t x = 0; x < 128 / blockSize; x++) {	// 8 vertical strips from left to right

							if (changed) {
								Wire.write(buffer[b]);
							}
							b++;
						}
						Wire.endTransmission();
					}
					else {
						b += 128 / blockSize;
					}
				}
			}

		}
		else
		{
			if (screenMode != 0x00) {
				Wire.beginTransmission(_i2caddr);
				Wire.write(0x20);		// OLED_CMD_SET_MEMORY_ADDR_MODE
				Wire.write(0x00);		// 0x00 = HORZ mode ; 0x01 = VERT ; 0x02 = PAGE
				Wire.endTransmission();
				screenMode = 0x00;
			}

			ssd1306_command(SSD1306_COLUMNADDR);
			ssd1306_command(0);   // Column start address (0 = reset)
			ssd1306_command(SSD1306_LCDWIDTH - 1); // Column end address (127 = reset)

			ssd1306_command(SSD1306_PAGEADDR);
			ssd1306_command(0); // Page start address (0 = reset)
			ssd1306_command(7); // Page end address

			//Serial.println("Force Update");
			for (uint16_t i = 0; i < (SSD1306_LCDWIDTH*SSD1306_LCDHEIGHT / 8); i++) {
				// send a bunch of data in one xmission
				Wire.beginTransmission(_i2caddr);
				WIRE_WRITE(0x40);
				for (uint8_t x = 0; x < 16; x++) {
					WIRE_WRITE(buffer[i]);
					i++;
				}
				i--;
				Wire.endTransmission();
			}
			std::copy(std::begin(buffer), std::end(buffer), std::begin(bufferprev));
		}


	}
	// DW - capture previous buffer to check for changes
	forceUpdate = 0;
	return 1;
}
